# arch-pkgbuilds

./: .SRCINFO  .gitignore  LICENSE  PKGBUILD  README.md
cargo-chef/: .SRCINFO  PKGBUILD
cargo-pgo/: .SRCINFO  PKGBUILD
cooklang-chef/: .SRCINFO
gimoji/: .SRCINFO  PKGBUILD
inlyne/: .SRCINFO  PKGBUILD
inlyne-bin/: .SRCINFO  PKGBUILD
lspmux/: .SRCINFO  PKGBUILD
metrics-observer/: .SRCINFO  PKGBUILD
oranda/: .SRCINFO  PKGBUILD
ra-multiplex/: .SRCINFO  PKGBUILD
regex-cli/: .SRCINFO  PKGBUILD
sd/: .SRCINFO  PKGBUILD
to-html/: .SRCINFO  PKGBUILD
typeshare/: .SRCINFO  PKGBUILD
utils/notif/: Cargo.toml
utils/notif/src/: main.rs
